--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "chart.js": "^4.4.3",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "xml2js": "^0.6.2"
+    "react-dom": "^18"
   }
 }
